# 3d-JRPG-adventure-pc-game

./: .cursorrules  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.cursor/: environment.game-development.json.example  environment.json  mcp.json.example
.cursor-plugin/: plugin.json
.github/: pull_request_template.md
docs/: ACCEPTANCE_CRITERIA.md  ACHIEVEMENTS.md  AGILE_WITHIN_PHASES.md  AI_DEV_WORKFLOW.md  AI_TESTING_SPEC.md  ART_AUTOMATION_PIPELINE.md  ART_DIRECTION.md  ASSET_COMPLIANCE.md  AUDIO_DIRECTION.md  AUDIO_PRODUCTION_GUIDE.md  AUDIO_QA.md  BOSS_DESIGNS.md  BRANCHING.md  CD.md  CHARACTER_BIBLE.md  CI.md  CINEMATICS.md  CLOUD_AGENT_SETUP_RUNBOOK.md  CLOUD_SNAPSHOT_LAUNCH.md  CODE_BASE_CLASS_RULES.md  CODE_STYLE.md  COMBAT_SYSTEMS.md  COMPREHENSIVE_TEST_PLAN.md  CONTROLS_CHEATSHEET.md  CURSOR_SECRETS_SETUP.md  DATA_ARCHITECTURE.md  DELIVERY_CONTROL.md  ENCOUNTER_TABLE.md  ENDING_DESIGN.md  ENVIRONMENTS.md  ENVIRONMENT_KITS.md  ESCALATION_POLICY.md  FACTORY_WATCHDOG.md  FLOW_QA.md  GAME_FEEL.md  GDAI_CLOUD_SETUP.md  GDAI_REGEN_PLAN.md  GDD.md  GDSCRIPT_REGENERATION.md  GENERATION_READINESS.md  (+56 more)
game/: .godotiq.json  README.md  default_bus_layout.tres  export_presets.cfg.example  project.godot
steam/: GODOTSTEAM_SETUP.md  STORE_PAGE.md  STORE_PAGE_zh-Hant.md  TRAILER_SCRIPT.md  godot_export_notes.txt  trailer_locales.json
tools/: achievement_evaluator_lib.py  add_zh_hant_locale.py  agent_session_telemetry_lib.py  alignment_audit_lib.py  analyze_agent_session_telemetry.py  analyze_playtest_logs.py  analyze_playtest_telemetry.py  audio_brief_lib.py  audit_radar_legacy_style.py  audit_radar_theme.py  (+203 more)
(+510 files in other folders)
